data/all_generated_tests/raw_wast_tests/unreachable_InvalidorInconsistentControlFlowGraph_1437.wast
;; 8. Create a scenario where `unreachable` follows a br_if instruction, ensuring that the br_if branch correctly bypasses the unreachable if conditions are met, or traps otherwise.    - **Constraint:** Proper branch prediction and execution with immediate trap upon reaching `unreachable`.    - **CFG Check:** Check correct execution path based on conditionals leading to or bypassing `unreachable`.

(assert_invalid
  (module (func $unreachable-after-br_if
    (block
      (br_if 0 (i32.const 1))
      (unreachable)
    )
  ))
  "type mismatch"
)